# CalculateEngineAndroid

./: .gitignore  MODULE.bazel  Package.resolved  Package.swift  README.md  build.gradle.kts  gradle.properties  origin_certificate.md  settings.gradle.kts
.fleet/: run.json
.github/: SECURITY.md  dependabot.yml
.github/workflows/: android.yml  docker.yml  swift.yml
android/: .bazelrc  README.md  WORKSPACE.bazel  build.gradle.kts  gradle.properties
android/.fleet/: run.json
android/lib/: BUILD.bazel  build.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/dev/CalculateEngine/: MainActivity.kt
app/src/main/kotlin/dev/CalculateEngine/math/: AbsoluteValue.kt  Average.kt  Exponent.kt
app/src/main/kotlin/dev/CalculateEngine/math/constant/: Pi.kt
app/src/main/kotlin/dev/CalculateEngine/math/conversion/: LengthConversion.kt
app/src/main/kotlin/dev/CalculateEngine/math/geometry/: Area.kt  Radius.kt  Volume.kt
app/src/main/kotlin/dev/CalculateEngine/model/: NavigationModel.kt
app/src/main/kotlin/dev/CalculateEngine/parser/: CalculateEngineLexer.kt  CalculateEngineParser.kt  CalculateEngineTokenizer.kt
app/src/main/kotlin/dev/CalculateEngine/physics/: Motion.kt  PhysicalObject.kt
app/src/main/kotlin/dev/CalculateEngine/theme/: Color.kt  Theme.kt  Typography.kt
app/src/main/kotlin/dev/CalculateEngine/widgets/: ConversionCalculator.kt  ExpandableCard.kt  GitHubSource.kt  HomeNavigationBar.kt  HomeRoute.kt  InDevelopment.kt  MenuSheet.kt  NavigationTopBar.kt  OpenStax.kt
app/src/main/kotlin/dev/calculate_engine/: MainActivity.kt
app/src/main/kotlin/dev/calculate_engine/math/: AbsoluteValue.kt  Exponent.kt
app/src/main/kotlin/dev/calculate_engine/math/geometry/: Radius.kt  Volume.kt
app/src/main/kotlin/dev/calculate_engine/model/: NavigationModel.kt
app/src/main/kotlin/dev/calculate_engine/parser/: CalculateEngineLexer.kt  CalculateEngineParser.kt  CalculateEngineTokenizer.kt
app/src/main/kotlin/dev/calculate_engine/physics/: Motion.kt  PhysicalObject.kt
app/src/main/kotlin/dev/calculate_engine/theme/: Color.kt  Theme.kt  Typography.kt
app/src/main/kotlin/dev/calculate_engine/widgets/: ConversionCalculator.kt  ConversionCalculatorRoute.kt  ExpandableCard.kt  GitHubRoute.kt  GitHubSource.kt  HomeDrawer.kt  HomeNavigationBar.kt  HomeRoute.kt  HomeTopAppBar.kt  InDevelopment.kt  MenuSheet.kt  NavigationTopBar.kt  OpenStax.kt  OpenStaxRoute.kt  StatelessDrawer.kt
app/src/main/res/mipmap-anydpi-v26/: hce_res_round.xml
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle.kts
lib/src/main/: AndroidManifest.xml
lib/src/main/kotlin/calculate_engine/: MainActivity.kt
lib/src/main/kotlin/calculate_engine/math/: AbsoluteValue.kt  Average.kt  Exponent.kt
lib/src/main/kotlin/calculate_engine/math/constant/: Pi.kt
lib/src/main/kotlin/calculate_engine/math/conversion/: CentimeterConversion.kt  DecameterConversion.kt  DecimeterConversion.kt  HectometerConversion.kt  KilometerConversion.kt  MeterConversion.kt  MillimeterConversion.kt
lib/src/main/kotlin/calculate_engine/math/geometry/: Area.kt  Radius.kt  Volume.kt
lib/src/main/kotlin/calculate_engine/model/: NavigationModel.kt
lib/src/main/kotlin/calculate_engine/physics/: Motion.kt  PhysicalObject.kt
lib/src/main/kotlin/calculate_engine/theme/: Color.kt  Theme.kt  Typography.kt
lib/src/main/kotlin/calculate_engine/widgets/: BasicCalculatorRoute.kt  GitHubRoute.kt  HomeRoute.kt  OpenStaxRoute.kt  StatelessDrawer.kt  StatelessNavigationBar.kt  StatelessTopAppBar.kt
lib/src/main/kotlin/dev/calculate_engine/: MainActivity.kt
lib/src/main/kotlin/dev/calculate_engine/logic/math/: AbsoluteValue.kt  Average.kt  Exponent.kt
lib/src/main/kotlin/dev/calculate_engine/logic/physics/: Motion.kt  PhysicalObject.kt
lib/src/main/kotlin/dev/calculate_engine/math/: Average.kt
lib/src/main/kotlin/dev/calculate_engine/math/constant/: Pi.kt
lib/src/main/kotlin/dev/calculate_engine/math/conversion/: AstronaumicalUnitConversion.kt  CentimeterConversion.kt  DecameterConversion.kt  DecimeterConversion.kt  FeetConversion.kt  HectometerConversion.kt  InchConversion.kt  KilometerConversion.kt  LengthConversion.kt  LightYearConversion.kt  MeterConversion.kt  MicrometerConversion.kt  MileConversion.kt  MillimeterConversion.kt  NanometerConversion.kt  NauticalMileConversion.kt  ParsecConversion.kt  PicometerConversion.kt  YardConversion.kt
lib/src/main/kotlin/dev/calculate_engine/math/geometry/: Area.kt
lib/src/main/kotlin/dev/calculate_engine/model/: NavigationModel.kt
lib/src/main/kotlin/dev/calculate_engine/widgets/: BasicCalculatorRoute.kt  ConversionCalculatorRoute.kt  GitHubRoute.kt  HomeRoute.kt  OpenStaxRoute.kt  StatelessNavigationBar.kt  StatelessTopAppBar.kt
lib/src/main/kotlin/dev/hyaenaTechnologies/calculateEngine/: MainActivity.kt
lib/src/main/kotlin/dev/hyaenaTechnologies/calculateEngine/model/: NavigationModel.kt
lib/src/main/kotlin/dev/hyaenaTechnologies/calculateEngine/theme/: Color.kt  Theme.kt  Typography.kt
lib/src/main/kotlin/dev/hyaenaTechnologies/calculateEngine/widgets/: BasicCalculatorRoute.kt  GitHubRoute.kt  HomeRoute.kt  OpenStaxRoute.kt  StatelessDrawer.kt  StatelessNavigationBar.kt  StatelessTopAppBar.kt
lib/src/main/kotlin/dev/hyaena_technologies/calculate_engine/: MainActivity.kt
lib/src/main/kotlin/dev/hyaena_technologies/calculate_engine/logic/: AbsoluteValue.kt  Area.kt  Average.kt  Exponent.kt  Pi.kt  Radius.kt  Volume.kt  state_hoist.kt
lib/src/main/kotlin/dev/hyaena_technologies/calculate_engine/model/: GraphModel.kt  NavigationModel.kt  StatefulViewModel.kt  StatelessNavigationHost.kt
lib/src/main/kotlin/dev/hyaena_technologies/calculate_engine/theme/: Color.kt  Theme.kt  Typography.kt
lib/src/main/kotlin/dev/hyaena_technologies/calculate_engine/widgets/: BasicCalculatorRoute.kt  GitHubRoute.kt  HomeDrawer.kt  HomeNavigationBar.kt  (+8 more)
lib/src/main/res/values/: styles.xml
lib/src/main/res/values-night/: styles.xml
native/: Package.resolved  swift.Dockerfile
test/: calculate_engine_swiftTests.swift
(+43 files in other folders)
