workspace(name = "calculate_engine_workspace")

load(
    "@rules_android//android:rules.bzl",
    "android_ndk_repository",
    "android_sdk_repository",
)
load(
    "@rules_kotlin//kotlin:repositories.bzl",
    "kotlin_repositories",
    "kotlinc_version",
)

android_ndk_repository(
    name = "android_ndk",
    api_level = 34,
    path = "../../Android/Sdk/ndk/27.0.11718014",
)

android_sdk_repository(
    name = "androidsdk",
    api_level = 34,
    build_tools_version = "34.0.0",
    path = "../../Android/Sdk",
)

kotlin_repositories(
    compiler_release = kotlinc_version(
        release = "1.9.24",
        sha256 = "eb7b68e01029fa67bc8d060ee54c12018f2c60ddc438cf21db14517229aa693b",
    ),
)

register_toolchains("//:kotlin_toolchain")
