load(
    "@rules_android//android:rules.bzl",
    "android_binary",
)
load(
    "@rules_kotlin//kotlin:android.bzl",
    "kt_android_library",
    "kt_android_local_test",
)

android_binary(
    name = "calculate_engine_apk",
    srcs = [
        "src/main/kotlin/**",
    ],
    assets = glob([
        "src/main/assets/**",
    ]),
    assets_dir = "src/main/assets",
    manifest = "src/main/AndroidManifest.xml",
    plugins = [":compose_plugin"],
    resource_files = glob([
        "src/main/res/**",
    ]),
    deps = [
        ":calculate_engine_android",
    ],
)

kt_android_library(
    name = "calculate_engine_android",
    srcs = [
        "src/main/kotlin/**",
    ],
    assets = glob([
        "src/main/assets/**",
    ]),
    assets_dir = "src/main/assets",
    manifest = "src/main/AndroidManifest.xml",
    plugins = [":compose_plugin"],
    resource_files = glob([
        "src/main/res/**",
    ]),
    deps = [
        # Android
        "@maven//:com_android_tools_compose_compose_preview_detector",
        "@maven//:androidx_activity_activity_compose",
        "@maven//:androidx_compose_animation_animation",
        "@maven//:androidx_compose_compiler_compiler",
        "@maven//:androidx_compose_foundation_foundation",
        "@maven//:androidx_compose_material_material",
        "@maven//:androidx_compose_material3_material3",
        "@maven//:androidx_compose_runtime_runtime",
        "@maven//:androidx_compose_ui_ui",
        "@maven//:androidx_compose_ui_ui_tooling",
        "@maven//:androidx_constraintlayout_constraintlayout_compose",
        "@maven//:androidx_core_core_ktx",
        "@maven//:androidx_lifecycle_lifecycle_runtime_compose",
        "@maven//:androidx_lifecycle_lifecycle_viewmodel_compose",
        "@maven//:androidx_navigation_navigation_compose",
        "@maven//:androidx_paging_paging_compose",
        "@maven//:com_google_android_material_compose_theme_adapter",
        "@maven//:com_google_android_material_compose_theme_adapter_3",
        "@maven//:com_google_android_material_compose_theme_adapter_core",
        # KTOR
        "@maven//:io_ktor_ktor_client_auth",
        "@maven//:io_ktor_ktor_client_core",
        "@maven//:io_ktor_ktor_client_cio",
        "@maven//:io_ktor_ktor_client_content_negotiation",
        "@maven//:io_ktor_ktor_client_encoding",
        "@maven//:io_ktor_ktor_client_json",
        "@maven//:io_ktor_ktor_client_logging",
        "@maven//:io_ktor_ktor_client_resources",
        "@maven//:io_ktor_ktor_client_serialization",
        "@maven//:io_ktor_ktor_events",
        "@maven//:io_ktor_ktor_http",
        "@maven//:io_ktor_ktor_http_cio",
        "@maven//:io_ktor_ktor_io",
        "@maven//:io_ktor_ktor_network",
        "@maven//:io_ktor_ktor_network_tls",
        "@maven//:io_ktor_ktor_network_tls_certificates",
        "@maven//:io_ktor_ktor_resources",
        "@maven//:io_ktor_ktor_serialization",
        "@maven//:io_ktor_ktor_serialization_kotlinx",
        "@maven//:io_ktor_ktor_serialization_kotlinx_json",
        "@maven//:io_ktor_ktor_utils",
        "@maven//:io_ktor_ktor_websockets",
        "@maven//:io_ktor_ktor_websocket_serialization",
        # JetBrains
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
        "@maven//:org_jetbrains_kotlinx_kotlinx_collections_immutable",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_android",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core",
        "@maven//:org_jetbrains_kotlinx_kotlinx_datetime",
        "@maven//:org_jetbrains_kotlinx_kotlinx_io_bytestring",
        "@maven//:org_jetbrains_kotlinx_kotlinx_io_core",
        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_core",
        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_json",
        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_properties",
        "@maven//:org_jetbrains_kotlinx_kotlinx_metadata_jvm",
        # Tests
        "@maven//:androidx_compose_ui_ui_test",
        "@maven//:io_ktor_ktor_client_tests",
        "@maven//:io_ktor_ktor_client_content-negotiation-tests",
        "@maven//:io_ktor_ktor_serialization_tests",
        "@maven//:io_ktor_ktor_serialization_kotlinx_tests",
        "@maven//:org_jetbrains_kotlin_kotlin_test",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines-test",
        "@maven//:org_jetbrains_kotlinx_lincheck",
    ],
)

kt_android_local_test(
    name = "calculate_engine_android_test",
    srcs = [
        "src/test/kotlin/**",
    ],
    assets = glob([
        "src/main/assets/**",
    ]),
    assets_dir = "src/main/assets",
    manifest = "src/main/AndroidManifest.xml",
    plugins = [":compose_plugin"],
    resource_files = glob([
        "src/main/res/**",
    ]),
    deps = [
        ":calculate_engine_android",
    ],
)